# unifyLLM

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/bridgellm/: __init__.py  _model_caps.py  agent.py  budget.py  client.py  compat.py  errors.py  models.py  registry.py  tools.py
src/bridgellm/adapters/: __init__.py  _convert.py  anthropic.py  base.py  bedrock.py  openai_compat.py  vertex.py
tests/: conftest.py  test_adapter_factory.py  test_agent.py  test_anthropic_adapter.py  test_budget.py  test_client.py  test_compat.py  test_concurrency.py  test_convert.py  test_errors.py  test_integration_real.py  test_model_caps.py  test_models.py  test_multimodal.py  test_openai_adapter.py  test_registry.py  test_tools.py
