[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bridgellm"
version = "0.3.3"
description = "Provider-agnostic LLM client with agentic capabilities. One interface, any provider."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Karan Panchal", email = "karan.panchal2105@gmail.com" },
]
keywords = ["llm", "ai", "openai", "anthropic", "groq", "agent", "tool-calling", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.50.0,<3.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0,<1.0.0"]
gemini = ["google-genai>=1.0.0,<2.0.0"]
bedrock = ["boto3>=1.28.0"]
vertex = ["google-auth>=2.0.0"]
all = [
    "anthropic>=0.40.0,<1.0.0",
    "google-genai>=1.0.0,<2.0.0",
    "boto3>=1.28.0",
    "google-auth>=2.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/karanpanchall/unifyLLM"
Repository = "https://github.com/karanpanchall/unifyLLM"
Issues = "https://github.com/karanpanchall/unifyLLM/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bridgellm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["bridgellm"]

[tool.coverage.report]
fail_under = 90
show_missing = true
